Wrap "more news" properly, fixes #61

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -320,8 +320,8 @@ h6.more-news-title {
 				padding:10px 0 0 0;
 			}
 			ul {
-			    margin: 0;
-				list-style: none inside url("more-headlines-li.png");
+			    margin: 0 0 0 14px; /* Keep the bullets inside the box but wrap properly */
+				list-style: none url("more-headlines-li.png");
 				li {
 					margin:5px 0 0 0;
 					a {
